# orch

./: .gitignore  .goreleaser.yaml  AGENTS.md  Cargo.toml  README.md  ROADMAP.md  Taskfile.yml  Taskfile_windows.yaml  Vagrantfile  go.mod  go.sum  go.work  go.work.sum  justfile  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml  release.yml  smoke-docker.yml
agent/: go.mod  go.sum  main.go
agent/cmd/: container.go  rootCmd.go
apps/access-client/: go.mod
apps/agent/: go.mod  go.sum
apps/cli/: go.mod
apps/controller/: Taskfile.yml  go.mod  go.sum
apps/ctl/: go.mod  main.go
apps/pack/: main.go
apps/server/: Vagrantfile  go.mod  go.sum  main.go
apps/warden-access-client/: Cargo.toml
apps/warden-cli/: Cargo.toml
apps/warden-cli-rs/: Cargo.toml
apps/warden-cli-rs/src/: cli_args.rs  dsl_cmd.rs  main.rs
apps/warden-cli/src/: cli_args.rs  dsl_cmd.rs  main.rs
apps/warden-server/: Cargo.toml
apps/warden-server-rs/: Cargo.toml
apps/warden-server-rs/src/: cli.rs  main.rs
cli/cmd/: deployCmd.go  rootCmd.go
cmd/cli/: api_client.go  main.go  output.go  rootCmd.go  workloadCmd.go
cmd/localraft/: main.go
cmd/orch-cli/: doc.go  main.go
cmd/orch-lsp/: doc.go  main.go  root.go
cmd/orch-server/: doc.go  host_dns_cmd.go  main.go  root.go
cmd/orch-vpn/: doc.go  main.go  root.go  serve_cmd.go  stop.go
cmd/pack/: catalog.go  listCmd.go  rootCmd.go  searchCmd.go
cmd/server/: api_client.go  clusterCmd.go  infoCmd.go  rootCmd.go  serverCmd.go  taskCmd.go  tokenCmd.go  unitCmd.go  workloadCmd.go
cmd/warden-cli/: main.go
cmd/warden-server/: main.go
controller/: Taskfile.yml  go.mod  go.sum  main.go
controller/cmd/: container.go  rootCmd.go
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/dnsbridge/: Cargo.toml
crates/fsyncer/: Cargo.toml
crates/peer/: Cargo.toml
crates/peer/src/: main.rs
crates/peer/src/config/: loader.rs  mod.rs
crates/peer/src/http/: mod.rs
crates/runner/: Cargo.toml
crates/secrets/: Cargo.toml
crates/spec/: Cargo.toml
crates/warden-api/: Cargo.toml
crates/warden-api/src/: doc.rs  error.rs  lib.rs
crates/warden-api/src/handlers/: dsl.rs  mod.rs  read.rs  system.rs  task_logs.rs  tasks.rs
crates/warden-api/tests/: http_behavior.rs
crates/warden-client/: Cargo.toml
crates/warden-client/src/: client.rs  endpoint.rs  lib.rs  request.rs  windows_npipe.rs
crates/warden-client/tests/: retry_strategy.rs
crates/warden-config/: Cargo.toml
crates/warden-dns/: Cargo.toml
crates/warden-dns/src/: lib.rs
crates/warden-dsl/: Cargo.toml
crates/warden-dsl-binder/: Cargo.toml
crates/warden-dsl-binder/src/: lib.rs  types.rs
crates/warden-dsl-canonical/: Cargo.toml
crates/warden-dsl-canonical/src/: lib.rs  types.rs
crates/warden-dsl-core/: Cargo.toml
crates/warden-dsl-core/src/: lib.rs
crates/warden-dsl-hir/: Cargo.toml
crates/warden-dsl-hir/src/: lib.rs
crates/warden-dsl-ir/: Cargo.toml
crates/warden-dsl-ir/src/: lib.rs
crates/warden-dsl-parser/: Cargo.toml
crates/warden-dsl-parser/src/: lib.rs
crates/warden-dsl-planner/: Cargo.toml
crates/warden-dsl-planner/src/: lib.rs  main.rs
crates/warden-dsl/src/: compile.rs  ir_manifest.rs  lib.rs  model.rs  plan.rs
crates/warden-dsl/tests/: dsl_v1.rs  invocation_dsl.rs  ir_manifest.rs
crates/warden-ingress/: Cargo.toml
crates/warden-ingress-http/: Cargo.toml
crates/warden-ingress-http/src/: lib.rs
crates/warden-ingress-resolver/: Cargo.toml
crates/warden-ingress-resolver/src/: lib.rs
crates/warden-ingress/src/: http_proxy.rs  lib.rs  service.rs  state.rs  stream.rs  stream_tcp.rs  stream_udp.rs  util.rs
crates/warden-runtime-containerd/: Cargo.toml
crates/warden-runtime-containerd/src/: deploy.rs  helper.rs  lib.rs  oci.rs  oci_parent.rs  oci_transfer.rs  spec.rs
crates/warden-runtime-docker/: Cargo.toml
crates/warden-runtime-docker/src/: helper.rs  lib.rs
crates/warden-runtime-firecracker/: Cargo.toml
crates/warden-runtime-firecracker/src/: helper.rs  lib.rs
crates/warden-runtime-process/: Cargo.toml
crates/warden-runtime-process/src/: helper.rs  lib.rs  process_ctl.rs  tail.rs
crates/warden-runtime-process/tests/: process_runtime.rs
crates/warden-store/: Cargo.toml
crates/warden-store/src/: backend.rs  lib.rs  memory.rs  records.rs  redb_backend.rs  state_store.rs  workload_ops.rs
crates/warden-task/: Cargo.toml
crates/warden-task/src/: deploy.rs  lib.rs  logs.rs  scheduling.rs  scheduling_helper.rs
crates/warden-task/tests/: scheduling.rs
dashboard/: .npmrc  index.html  package.json  pnpm-lock.yaml  tsconfig.app.json  tsconfig.json
docker/: executor.go  go.mod
docs/: SUMMARY.md  Taskfile.yml  book.toml  dsl.md  dsl.zh.md  fullstack-docker.md  go.mod  gossip-clustering.md  hugo.yaml  ingress.md  ingress.zh.md  introduction.md  local-docker-dns-smoke.md  local-docker-smoke.md  local-docker-worker-dispatch-smoke.md  local-podman-dns-smoke.md  local-podman-smoke.md  local-podman-worker-dispatch-smoke.md  local-raft.md  local-vagrant-smoke.md  project-status.md  quick-start.md  release-beta.md  resource-benchmark.md  runtime-compatibility.md  warden_deploy_dsl_spec_bilingual.md
examples/: dsl-v1-demo.yaml  firecracker-tap.orch  fullstack-docker.orch  local-docker-dns-smoke.yaml  local-docker-smoke.yaml  local-docker-worker-dispatch.yaml  local-podman-dns-smoke.yaml  local-podman-smoke.yaml  local-podman-worker-dispatch.yaml  local-raft-forwarding.yaml  local-vagrant-smoke.yaml  minimal-nginx.yaml  process-echo.yaml
executor/: executor.go  go.mod
firecracker/: go.mod
logger/: go.mod
pack/: go.mod
pkg/: id.go  machine_id_mac.go
scripts/: bench-orch-resources.ps1  local-docker-dns-smoke.ps1  local-docker-smoke.ps1  local-docker-worker-dispatch-smoke.ps1  local-raft-forwarding-smoke.ps1  run-container-runtime-smokes.ps1
store/: badgerdb.go  go.mod  go.sum  raft.go  servic.go
systemd/: go.mod
task/: definition.go  go.mod  parser.go
warden/: Taskfile.yml  go.mod  go.sum
xtask/: Cargo.toml  build.rs
(+752 files in other folders)
