[workspace]
members = ["crates/cli", "crates/dnsbridge", "crates/fsyncer", "crates/net", "crates/peer", "crates/runner", "crates/secrets", "crates/spec", "crates/utils"]
resolver = "3"

[workspace.metadata]
name = "warden"

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
tracing = "0.1.41"
serde = "1.0"
tokio = "1"
tracing-subscriber = "0.3.19"
dotenvy = "0.15.7"
async-trait = "0.1.88"
uuid = "1.17.0"
base64 = "0.22.1"
rusttype = "0.9"
sha2 = "0.10.9"
figment = "0.10.19"