[workspace]
members = [
  "apps/warden-server-rs",
  "apps/warden-cli-rs",
  "crates/warden-types",
  "crates/warden-config",
  "crates/warden-logger",
  "crates/warden-store",
  "crates/warden-registry",
  "crates/warden-dns",
  "crates/warden-ingress",
  "crates/warden-runtime",
  "crates/warden-task",
  "crates/warden-raft",
  "crates/warden-api",
  "crates/warden-http",
  "crates/warden-client",
  "crates/warden-dsl",
  "xtask",
  "crates/warden-runtime-docker",
  "crates/warden-runtime-containerd",
  "crates/warden-runtime-firecracker",
  "crates/warden-runtime-process",
]
resolver = "2"

[workspace.package]
edition = "2024"
version = "0.1.0"
license = "MIT"

[workspace.dependencies]
anyhow = "1"
axum = { version = "0.8", features = ["macros"] }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
figment = { version = "0.10", features = ["env", "toml", "yaml", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "net", "fs", "io-util", "time", "sync", "process"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
reqwest = { version = "0.13.2", default-features = false, features = ["json", "rustls"] }
reqwest-middleware = "0.5.1"
reqwest-retry = "0.9.1"
url = "2"
async-trait = "0.1"
bollard = "0.19.4"
futures-util = "0.3"
openraft = "0.9"
validator = { version = "0.20", features = ["derive"] }
moka = { version = "0.12", features = ["sync"] }
duct = "1.1.1"
utoipa = { version = "5", features = ["axum_extras", "chrono"] }
utoipa-swagger-ui = { version = "9", features = ["axum", "vendored"] }
sysinfo = "0.38.3"
containerd-client = "0.8.0"
fluxdi = "1.2.1"
fluxdi-macros = "1.2.1"

[workspace.dev-dependencies.cargo-husky]
version = "1"
default-features = false
features = ["precommit-hook", "run-cargo-clippy", "run-cargo-fmt"]