[package]
name = "warden-cli-rs"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
warden-client = { path = "../../crates/warden-client" }
warden-types = { path = "../../crates/warden-types" }
