[package]
name = "warden-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
warden-client = { path = "../../crates/warden-client" }
warden-dsl = { path = "../../crates/warden-dsl" }
warden-dsl-planner = { path = "../../crates/warden-dsl-planner" }
warden-types = { path = "../../crates/warden-types" }
