[package]
name = "cli"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.41", features = [
    "derive",
    "debug",
    "unicode",
    "cargo",
    "usage",
    "help",
    "suggestions",
    "color",
    "string"
] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
figment = { workspace = true, features = ["env", 'toml', 'serde_json'] }
dotenvy = { workspace = true }