[package]
name = "warden-api"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
axum.workspace = true
serde.workspace = true
serde_json.workspace = true
sysinfo.workspace = true
utoipa.workspace = true
utoipa-swagger-ui = { workspace = true }
warden-dns = { path = "../warden-dns" }
warden-registry = { path = "../warden-registry" }
warden-task = { path = "../warden-task" }
warden-types = { path = "../warden-types" }

[dev-dependencies]
tokio.workspace = true
tower.workspace = true
warden-runtime = { path = "../warden-runtime" }
warden-store = { path = "../warden-store" }
