[package]
name = "warden-dns"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
hickory-proto = "0.25"
hickory-server = "0.25"
moka.workspace = true
tokio.workspace = true
tracing.workspace = true
warden-store = { path = "../warden-store" }
warden-types = { path = "../warden-types" }
