[package]
name = "warden-dsl-binder"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true, features = ["derive"] }
thiserror = "2.0.18"
warden-dsl-ast = { path = "../warden-dsl-ast" }
warden-dsl-hir = { path = "../warden-dsl-hir" }

[dev-dependencies]
warden-dsl-parser = { path = "../warden-dsl-parser" }
