[package]
name = "warden-dsl-core"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
smol_str = "0.3.6"
thiserror = "2.0.18"
serde = { version = "1.0.228", features = ["derive"] }
camino = { version = "1.2.2", features = ["serde1"] }
indexmap = { version = "2.13.0", features = ["serde"] }
