[package]
name = "warden-dsl-hir"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true, features = ["derive"] }
smol_str = "0.3.6"
thiserror = "2.0.18"
rustc-hash = "2.1.1"
warden-dsl-ast = { path = "../warden-dsl-ast" }

[dev-dependencies]
warden-dsl-parser = { path = "../warden-dsl-parser" }
