[package]
name = "warden-dsl-ir"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true, features = ["derive"] }
warden-dsl-ast = { path = "../warden-dsl-ast" }
warden-dsl-hir = { path = "../warden-dsl-hir" }

[dev-dependencies]
warden-dsl-parser = { path = "../warden-dsl-parser" }
