[package]
name = "warden-dsl-parser"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
chumsky = { version = "0.12.0", features = ["pratt"] }
ariadne = "0.6.0"
warden-dsl-ast = {path = "../warden-dsl-ast" }
warden-dsl-core = {path = "../warden-dsl-core" }
serde_json = "1.0.145"
smol_str = "0.3.6"