[package]
name = "warden-dsl"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_yaml = "0.9"
warden-dsl-ast = { path = "../warden-dsl-ast" }
warden-dsl-hir = { path = "../warden-dsl-hir" }
warden-dsl-ir = { path = "../warden-dsl-ir" }
warden-types = { path = "../warden-types" }

[dev-dependencies]
warden-dsl-parser = { path = "../warden-dsl-parser" }
