[package]
name = "warden-ingress"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
moka.workspace = true
reqwest.workspace = true
tokio.workspace = true
tracing.workspace = true
warden-registry = { path = "../warden-registry" }
warden-types = { path = "../warden-types" }
