[package]
name = "warden-ingress"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
axum.workspace = true
tokio.workspace = true
tracing.workspace = true
warden-ingress-http = { path = "../warden-ingress-http" }
warden-ingress-resolver = { path = "../warden-ingress-resolver" }
warden-ingress-stream = { path = "../warden-ingress-stream" }
warden-ingress-types = { path = "../warden-ingress-types" }
warden-registry = { path = "../warden-registry" }
