[package]
name = "warden-runtime-containerd"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
containerd-client = "0.6"
tracing.workspace = true
warden-runtime = { path = "../warden-runtime" }
warden-types = { path = "../warden-types" }
