[package]
name = "warden-runtime-containerd"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
containerd-client = "0.8"
prost = "0.13"
prost-types = "0.13"
serde_json.workspace = true
tracing.workspace = true
warden-runtime = { path = "../warden-runtime" }
warden-types = { path = "../warden-types" }
