[package]
name = "warden-runtime-docker"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
bollard.workspace = true
futures-util.workspace = true
tracing.workspace = true
warden-runtime = { path = "../warden-runtime" }
warden-types = { path = "../warden-types" }
